--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1989,7 +1989,7 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 }
 
 .product-card__image {
-    padding: 18px;
+    /*padding: 18px;*/
     -ms-flex-negative: 0;
     flex-shrink: 0
 }
@@ -9843,10 +9843,10 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 
 .block-slideshow__slide-image {
     position: absolute;
-    /*left: 0;*/
+    left: 0;
     right: 0;
-    width: 400px;
-    height: 300px;
+    width: 100%;
+    height: 100vh;
     background-repeat: no-repeat
 }
 
